// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DisablePopup component tests snapshot testing for no process-management addon and only service URL 1`] = `
<Tooltip
  content="Management add-on capability not enabled. Contact your administrator to set up"
  data-ouia-component-type="disable-popup"
  data-ouia-safe={true}
>
  <Checkbox
    className=""
    component="div"
    id="test"
    isChecked={false}
    isDisabled={false}
    isRequired={false}
    isValid={true}
    onChange={[Function]}
    ouiaSafe={true}
  />
</Tooltip>
`;

exports[`DisablePopup component tests snapshot testing for no service URL and no process-management addon 1`] = `
<Tooltip
  content="Management add-on capability not enabled & missing the kogito.service.url property. Contact your administrator to set up."
  data-ouia-component-type="disable-popup"
  data-ouia-safe={true}
>
  <Checkbox
    className=""
    component="div"
    id="test"
    isChecked={false}
    isDisabled={false}
    isRequired={false}
    isValid={true}
    onChange={[Function]}
    ouiaSafe={true}
  />
</Tooltip>
`;

exports[`DisablePopup component tests snapshot testing for no service URL and only process-management addon 1`] = `
<Tooltip
  content="This Kogito runtime is missing the kogito.service.url property. Contact your administrator to set up."
  data-ouia-component-type="disable-popup"
  data-ouia-safe={true}
>
  <Checkbox
    className=""
    component="div"
    id="test"
    isChecked={false}
    isDisabled={false}
    isRequired={false}
    isValid={true}
    onChange={[Function]}
    ouiaSafe={true}
  />
</Tooltip>
`;

exports[`DisablePopup component tests snapshot testing for service URL and process-management addon available 1`] = `
<Tooltip
  content=""
  data-ouia-component-type="disable-popup"
  data-ouia-safe={true}
>
  <Checkbox
    className=""
    component="div"
    id="test"
    isChecked={false}
    isDisabled={false}
    isRequired={false}
    isValid={true}
    onChange={[Function]}
    ouiaSafe={true}
  />
</Tooltip>
`;
